[package]
name = "rustkrazy_updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cargo = "0.67.0"
clap = { version = "4.2.7", features = ["derive"] }
fatfs = "0.3.6"
fscommon = "0.1.1"
reqwest = { version = "0.11.17", features = ["blocking"] }
squashfs-ng = "0.1.2"
tempfile = "3.5.0"
